--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
   height: 100%;
   font-family: sans-serif;
 }
 
-div {
-  border: 1px solid #ff0000;
+#root {
+  height: 100%;
 }
+
+/* div { */
+/*   border: 1px solid #ff0000; */
+/* } */
