Improve styling for link and link list

--- a/src/component/Link/link.css
+++ b/src/component/Link/link.css
@@ -2,6 +2,8 @@ a:link, a:visited {
   text-align: center; 
   text-decoration: none;
   display: inline-block;
+  font-weight: bold;
+  font-size: small;
 }
 
 a:hover {
