--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
 }
 
 #root {
