--- a/src/component/PostView/post-view.css
+++ b/src/component/PostView/post-view.css
@@ -20,3 +20,12 @@
 .post-view__code {
   margin: 40px 40px 0px 40px;
 }
+
+.post-view__table {
+  margin: 40px 40px 0px 40px;
+  padding-right: 75px;
+}
+
+.post-view__title {
+  margin: 40px 40px 0px 40px;
+}
