--- a/src/component/Post/post.css
+++ b/src/component/Post/post.css
@@ -30,11 +30,13 @@
   padding-left: 5px;
 }
 
-.post__link--edit {
+.post__link--edit:link, .post__link--edit:visited {
   color: blue;
+  text-decoration: none;
 }
 
-.post__link--delete {
+.post__link--delete:link, .post__link--delete:visited {
   color: red;
   margin-left: 10px;
+  text-decoration: none;
 }
