--- a/src/component/CommentForm/comment-form.css
+++ b/src/component/CommentForm/comment-form.css
@@ -1,7 +1,7 @@
-.message-form {
+.comment-form {
   margin: 40px 40px 0px 40px;
 }
 
-.message-form__button--submit {
+.comment-form__button--submit {
   margin-left: 20px;
 }
