Add CSS for active and inactive sort buttons

--- a/src/component/Sorter/sorter.css
+++ b/src/component/Sorter/sorter.css
@@ -1,5 +1,9 @@
-.sorter {
+.sorter__sort--active {
+  cursor: pointer;
+  text-decoration: underline;
 }
 
-.sorter__heading {
+.sorter__sort--inactive {
+  cursor: auto;
+  text-decoration: none;
 }
