Show disabled submit button for post
When a required field is not filled out.

--- a/src/component/PostForm/post-form.css
+++ b/src/component/PostForm/post-form.css
@@ -6,6 +6,11 @@
   margin-left: 20px;
 }
 
+.post-form__button--disabled {
+  background-color: #cccccc !important;
+  margin-left: 20px;
+}
+
 .post-form__snippet {
   height: 200px;
 }
