--- a/src/component/CommentForm/comment-form.css
+++ b/src/component/CommentForm/comment-form.css
@@ -5,3 +5,8 @@
 .comment-form__button--submit {
   margin-left: 20px;
 }
+
+.comment-form__button--disabled {
+  background-color: #cccccc !important;
+  margin-left: 20px;
+}
