Fix styling on long comments

--- a/src/component/Comment/comment.css
+++ b/src/component/Comment/comment.css
@@ -2,6 +2,14 @@
   color: #bdbdbd;
 }
 
+.comment__body {
+  display: block;
+}
+
+.comment__info {
+  margin-top: 5px;
+}
+
 .comment__link--edit {
   background-color: transparent;
   border: none;
