--- a/src/component/Heading/heading.css
+++ b/src/component/Heading/heading.css
@@ -2,3 +2,12 @@
   text-align: center;
   margin-bottom: 25px;
 }
+
+.heading__subtext--default {
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.heading__subtext--barcode {
+  font-family: 'Libre Barcode 39 Text', cursive;
+  font-size: xx-large;
+}
