Hide horizontal overflow in App

--- a/src/component/App/App.css
+++ b/src/component/App/App.css
@@ -2,5 +2,6 @@
   background-color: white;
   height: 100%;
   padding-bottom: 120px;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
