--- a/src/component/Post/post.css
+++ b/src/component/Post/post.css
@@ -13,8 +13,6 @@
 
 .post__title:link, .post__title:visited {
   color: black;
-  font-size: large;
-  font-weight: bold;
   text-decoration: none;
 }
 
@@ -26,18 +24,23 @@
 
 .post__link--edit {
   background-color: transparent;
-  border: solid 1px;
+  border: solid 1px #bbbbbb;
+  color: #555555;
   cursor: pointer;
   padding: 0px 10px 0px 10px;
   text-decoration: none;
 }
 
+.post__link--edit:hover {
+  color: #555555;
+}
+
 .post__link--delete {
   background-color: transparent;
-  border: solid 1px;
+  border: solid 1px #bbbbbb;
   color: red;
   cursor: pointer;
-  margin: 0px 0px 5px 10px;
+  margin: 0px 0px 10px 10px;
   padding: 0px 10px 0px 10px;
   text-decoration: none;
 }
