--- a/src/component/VoteBox/vote-box.css
+++ b/src/component/VoteBox/vote-box.css
@@ -1,7 +1,8 @@
 .vote-box {
   background-color: white;
-  border: 1px solid #e1e1e1;
+  border: 2px solid #e1e1e1;
   margin: 20px 40px 0 40px;
+  padding-top: 10px;
 }
 
 .vote-box__votes {
