Add input/select disabled styles

--- a/src/component/App/app.css
+++ b/src/component/App/app.css
@@ -5,3 +5,11 @@
   overflow-x: hidden;
   overflow-y: auto;
 }
+
+input:disabled {
+  background: #cccccc;
+}
+
+select:disabled {
+  background: #cccccc;
+}
