Disable selection for vote score

--- a/src/component/VoteBox/vote-box.css
+++ b/src/component/VoteBox/vote-box.css
@@ -21,3 +21,10 @@
   margin-right: 15px;
   text-decoration: none;
 }
+
+.disable-selection {
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer */
+  -webkit-user-select: none; /* Chrome, Safari, and Opera */
+  -webkit-touch-callout: none; /* Disable Android and iOS callouts*/
+}
