--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ html, body, #root {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 :focus {
