--- a/src/component/Post/post.css
+++ b/src/component/Post/post.css
@@ -11,9 +11,9 @@
   text-decoration: none;
 }
 
-.post__title:link, .post__title:visited {
+.post__title, post__title:link, .post__title:visited {
   color: black;
-  text-decoration: none;
+  font-weight: bold;
 }
 
 .post__comments {
