--- a/src/component/CommentForm/comment-form.css
+++ b/src/component/CommentForm/comment-form.css
@@ -8,5 +8,6 @@
 
 .comment-form__button--disabled {
   background-color: #cccccc !important;
+  border: 1px solid #cccccc !important;
   margin-left: 20px;
 }
