--- a/src/component/PostForm/post-form.css
+++ b/src/component/PostForm/post-form.css
@@ -8,6 +8,7 @@
 
 .post-form__button--disabled {
   background-color: #cccccc !important;
+  border: 1px solid #cccccc !important;
   margin-left: 20px;
 }
 
